// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChromaVectorStore mmr search 1`] = `
[
  [
    Context {
      "metadata": {},
      "pageContent": "I like pizza",
    },
    0.833390357575667,
  ],
  [
    Context {
      "metadata": {},
      "pageContent": "I don't like dogs",
    },
    -0.014507155088069712,
  ],
]
`;

exports[`ChromaVectorStore similarity search 1`] = `
[
  [
    Context {
      "metadata": {},
      "pageContent": "I like pizza",
    },
    0.33321927209466545,
  ],
  [
    Context {
      "metadata": {},
      "pageContent": "I don't like dogs",
    },
    0.44407291953459693,
  ],
]
`;
